tests/invalid/ListSublist_Invalid_2.whiley

method main() -> [int]:
    [int] list = [1, 2, 3]
    return list[1..4]
